# salgo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml
bench/: .gitignore  CMakeLists.txt  allocator  allocator.cpp  common.hpp  dynamic-array.cpp  hash-table.cpp  list.cpp  vector.cpp
benchmark/: .gitignore  CMakeLists.txt  hash-table  hash-table.cpp  list.cpp  vector.cpp
doc/: CHUNKED-ARRAY.md  CHUNKED-VECTOR.md  CRUDE-ALLOCATOR.md  DYNAMIC-ARRAY-ALLOCATOR.md  DYNAMIC-ARRAY.md  HASH-TABLE.md  LIST.md  MEMORY-BLOCK.md  NAMED-ARGUMENTS.md  RANDOM-ALLOCATOR.md  SALGO-FROM-STD-ALLOCATOR.md  UNORDERED-ARRAY.md  UNORDERED-VECTOR.md  VECTOR-ALLOCATOR.md  VECTOR.md
include/salgo/: accessor-base.hpp  accessors.hpp  all  allocator-storage.hpp  allocator.hpp  binary-forest  binary-tree.hpp  binomial  binomial.hpp  bst.hpp  chunked-array  chunked-vector  chunked-vector.hpp  common.hpp  crude-allocator  crude-allocator.hpp  dynamic-array  graph  graph.hpp  hash  hash-table  hash-table.hpp  hash.hpp  helper-macros-off  helper-macros-on  inorder  inorder.hpp  inplace-storage  int-handle.hpp  int-pow.hpp  iterator-base.hpp  kd  key-val.hpp  link-cut-tree.hpp  list  list.hpp  memory-block  memory-block-storage.hpp  memory-block.hpp  modulo  (+37 more)
include/salgo/3d/: cap-holes  cap-holes.hpp  collapse-edges  collapse-edges.hpp  compute-normals  compute-normals.hpp  edge-links.hpp  io  io.hpp  mesh  mesh-utils.hpp  mesh.hpp  solid  solid.hpp  vert-poly-links.hpp
include/salgo/_/: accessors.hpp  add-member.hpp  chunked-array.hpp  chunked-array.inl  constructor-macros.hpp  crtp.hpp  dynamic-array.hpp  dynamic-array.inl  global-instance.hpp  handles.hpp  has-member.hpp  hash-table.hpp  hash-table.inl  hash.hpp  helper-macros-on.inc  inplace-storage.hpp  int-pow.hpp  invalid-type.hpp  iterable-base.hpp  iterable-base.inl  iteration-callback.hpp  key-val.hpp  list.hpp  list.inl  macro-overloading.hpp  map.hpp  map.inl  memory-block.hpp  memory-block.inl  named-arguments.hpp  rand.hpp  ratio.hpp  reverse.hpp  reverse.inl  reversed.hpp  subscript-tags.hpp  template-macros.hpp  type-traits.hpp  union-find.hpp  union-find.inl  (+2 more)
include/salgo/_/alloc/: array-allocator.hpp  array-allocator.inl  crude-allocator.hpp  crude-allocator.inl  random-allocator.hpp  salgo-from-std-allocator.hpp
include/salgo/_/discr/: binomial.hpp  modulo-hash.hpp  modulo-hash.inl  modulo-utils.hpp  modulo.hpp  modulo.inl  primes.hpp  totient.hpp
include/salgo/_/geom/: point-base.hpp  segment-base.hpp  triangle-base.hpp
include/salgo/_/geom/g3d/: cap-holes.hpp  collapse-edges.inl  compute-normals.hpp  cut-poly.hpp  edge-links.inl  io.hpp  merge-verts.hpp  mesh-utils.hpp  named-arguments.hpp  point-triangle.hpp  remove-2sided.inl  remove-inverted.inl  segment-segment.hpp  segment-triangle.hpp  solid.inl  split-edge.hpp  vert-poly-links.hpp
include/salgo/_/graph/: bst.hpp  graph.hpp  graph.inl  inorder.hpp  link-cut-tree.hpp  splay.hpp
include/salgo/_/graph/n-ary-forest/: n-ary-forest-accessor.hpp  n-ary-forest.hpp  n-ary-forest.inl
include/salgo/_/linalg/: aabb.hpp  fit-line.inl  kd.hpp  kd.inl
include/salgo/alloc/: array-allocator  crude-allocator  random-allocator  salgo-from-std-allocator
include/salgo/discr/: all  binomial  modulo  modulo-hash  primes
include/salgo/geom/: point-segment
include/salgo/geom/3d/: cap-holes  collapse-edges  compute-normals  cut-poly  io  mesh  point-triangle  segment-segment  segment-triangle  solid  split-edge
include/salgo/geom/g3d/: cap-holes  collapse-edges  compute-normals  cut-poly  io  merge-verts  mesh  point-triangle  remove-2sided  remove-inverted  segment-segment  segment-triangle  solid  split-edge
include/salgo/graph/: all  binary-forest  graph  inorder  n-ary-forest
include/salgo/internal/: accessors.hpp  binomial.hpp  bst.hpp  chunked-vector.hpp  common.hpp  const-flag.hpp  get-aabb.hpp  graph.hpp  handles.hpp  hash-table.hpp  hash.hpp  helper-macros-off  helper-macros-on  inorder.hpp  inplace-storage.hpp  kd.hpp  key-val.hpp  link-cut-tree.hpp  list.hpp  memory-block.hpp  modulo-hash.hpp  named-arguments.hpp  random-allocator.hpp  salgo-from-std-allocator.hpp  segment.hpp  union-find.hpp  unordered-vector.hpp  vector-allocator.hpp  vector.hpp
include/salgo/internal/3d/: collapse-edges.hpp  common.hpp  compute-normals.hpp  io.hpp  mesh-utils.hpp  mesh.hpp  solid.hpp
include/salgo/internal/geom/: point-segment.hpp  segment-base.hpp  segment.hpp  triangle-base.hpp  triangle.hpp
include/salgo/internal/geom/3d/: cap-holes.hpp  (+16 more)
include/salgo/internal/n-ary-forest/: accessor.hpp  n-ary-forest.hpp
include/salgo/linalg/: fit-line  kd
include/salgo/old/: sparse-vector-storage.hpp
samples/: CMakeLists.txt  common.hpp  fast-io.hpp  stdio-tester.py
samples/pa2018/skw/: .gitignore  CMakeLists.txt  skw.cpp
samples/pa2018/skw/test/: nadara0.in  nadara0.out  smulewicz0.out
samples/resources/: stdio-tester.py
test/: .gitignore  CMakeLists.txt  allocator.cpp  binary-forest.cpp  binary-tree.cpp  binomial.cpp  chunked-array.cpp  chunked-vector.cpp  clear-cache.hpp  common.hpp  crude-allocator.cpp  dense-vector.cpp  dynamic-array.cpp  fast-rand.hpp  graph.cpp  hash-table.cpp  inplace-storage.cpp  kd.cpp  list.cpp  main.cpp  map.cpp  memory-block.cpp  miller-rabin.cpp  modulo.cpp  named-arguments.cpp  rooted-forest.cpp  sparse-array.cpp  sparse-vector.cpp  splay-tree.cpp  stack-storage.cpp  union-find.cpp  unordered-array.cpp  unordered-vector.cpp  vector-sparse.cpp  vector.cpp
test/3d/: .gitignore  CMakeLists.txt  cap-holes.cpp  collapse-edges.cpp  common.hpp  compute-normals.cpp  resources.cpp  resources.hpp
test/g3d/: .gitignore  cap-holes.cpp  collapse-edges.cpp  common.hpp  compute-normals.cpp
test/problems/: CMakeLists.txt  slow-io.hpp
test/problems/pa2018/: CMakeLists.txt
test/problems/pa2018/pal/: pal.cpp
test/problems/pa2018/skw/: skw  skw.cpp
test/problems/pa2018/skw/test/: smulewicz0.in
travis/: .gitignore  install-cmake.sh  install-eigen.sh  install-glog.sh  install-google-benchmark.sh  install-gtest.sh  install-libcxx.sh
(+15 files in other folders)
